--- a/public/css/style.css
+++ b/public/css/style.css
@@ -225,6 +225,12 @@ header
 	background-color: #3726a6 !important;
 }
 
+#infoPostComment
+{
+	color: red;
+	font-size: 14px;
+}
+
 /*Form post backoffice*/
 .form-group .contentFormTextArea
 {
